<resources>
    <string name="app_name">Lifeventure</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_fight">Fight</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_activity_fight">FightActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="task_activity_desc">Button to the Task Activity</string>
    <string name="profile_activity_desc">Button to the Profile Activity</string>
    <string name="fight_activity_desc">Button to the Fight Activity</string>
    <string name="settings_activity_desc">Button to the Settings Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_task">Create Task</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="add_destination">Add Destination</string>
    <string name="difficulty_easy">Difficulty: Easy</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="difficulty_very_easy">Difficulty: Very Easy</string>
    <string name="cardtitle">cardTitle</string>
    <string name="carddesc">cardDesc</string>
    <string name="cardexp">cardExp</string>
    <string name="carddate">cardDate</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="level">Level</string>
    <string name="textview">TextView</string>
    <string name="exp">Exp</string>
    <string name="title_activity_fight_screen">FightScreenActivity</string>
</resources>
