<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/levelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/level"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/levelDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/expTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18sp"
        android:text="@string/exp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="18sp"
        android:text="@string/textview" />
</LinearLayout>