<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:layout_height="wrap_content"
            android:hint="email"/>



    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/taskCreateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_task_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/taskCreateDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskCreateName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_task_description"
        android:autofillHints="" />

    <SeekBar
        android:id="@+id/difficultySlider"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_below="@+id/taskCreateDesc"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:max="4"/>

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficultySlider"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/difficulty_very_easy"
        android:textAlignment="center" />

    <Button
        android:id="@+id/finaliseTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficultyText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/create_task"
        android:textAlignment="center" />

    <Button
        android:id="@+id/cancelTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficultyText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/finaliseTaskButton"
        android:background="@android:color/transparent"
        android:shadowColor="@android:color/transparent"
        android:text="@android:string/cancel" />

</RelativeLayout>